force-app/main/default/objects/AI_Agent_Interaction__c/AI_Agent_Interaction__c.object-meta.xml
<CustomObject>
    <label>AI Agent Interaction</label>
    <pluralLabel>AI Agent Interactions</pluralLabel>
    <nameField>
        <label>Interaction Name</label>
        <type>AutoNumber</type>
        <displayFormat>INT-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>

</CustomObject>