force-app/main/default/objects/AI_Agent_Interaction__c/fields/AI_Response__c.field-meta.xml
<CustomField>
    <fullName>AI_Response__c</fullName>
    <label>AI Response</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>