force-app/main/default/objects/AI_Agent_Interaction__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>