force-app/main/default/objects/AI_Agent_Interaction__c/fields/Intent__c.field-meta.xml
<CustomField>
    <fullName>Intent__c</fullName>
    <label>Intent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>