force-app/main/default/objects/AI_Agent_Interaction__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <label>Session</label>
    <!-- <deleteConstraint>Restrict</deleteConstraint> -->
    <referenceTo>AI_Agent_Session__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>MasterDetail</type>
</CustomField>