force-app/main/default/objects/AI_Agent_Interaction__c/fields/Tool_Input__c.field-meta.xml
<CustomField>
    <fullName>Tool_Input__c</fullName>
    <label>Tool Input</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>