force-app/main/default/objects/AI_Agent_Interaction__c/fields/Tool_Name__c.field-meta.xml
<CustomField>
    <fullName>Tool_Name__c</fullName>
    <label>Tool Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>