force-app/main/default/objects/AI_Agent_Interaction__c/fields/Tool_Output__c.field-meta.xml
<CustomField>
    <fullName>Tool_Output__c</fullName>
    <label>Tool Output</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>