force-app/main/default/objects/AI_Agent_Interaction__c/fields/User_Message__c.field-meta.xml
<CustomField>
    <fullName>User_Message__c</fullName>
    <label>User Message</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>